# MA-abduction-based-on-DoTL-models

./: README.md
code/: CMakeLists.txt
code/src/: benchmarks.cpp  main.cpp  model.cpp  model.hpp
